// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enumeration should render with header in add state and list in default state 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="New entry"
      type="text"
    />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-check"
        />
      </svg>
    </button>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items"
  >
    <li
      className="tc-enumeration-item"
      id="0-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 0
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="1-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 1
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="2-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 2
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state and first item in edit mode, validate button disabled is disabled 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Values
    </span>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items"
  >
    <li
      className="undefined tc-enumeration-item"
      id="0-item"
    >
      <input
        autoFocus={true}
        className="undefined tc-enumeration-item-label"
        onChange={[Function]}
        onKeyDown={[Function]}
        type="text"
      />
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-check"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-cross"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="1-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 1
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="2-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 2
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state and list in default state 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Values
    </span>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items"
  >
    <li
      className="tc-enumeration-item"
      id="0-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 0
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="1-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 1
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="2-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 2
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Enumeration should render with header in selected state with trash icon, and two items in selected mode 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      2 selected values
    </span>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </header>
  <ul
    className="undefined tc-enumeration-items"
  >
    <li
      className="undefined tc-enumeration-item selected-item"
      id="0-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 0
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item selected-item"
      id="1-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 1
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="tc-enumeration-item"
      id="2-item"
    >
      <button
        aria-describedby={42}
        className="undefined tc-enumeration-item-label btn btn-default"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span>
          Lorem ipsum dolor sit amet 2
        </span>
      </button>
      <div
        className="undefined tc-enumeration-item-actions"
      >
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-pencil"
            />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}
          >
            <use
              xlinkHref="#talend-trash"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Enumeration should render with header without items 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Values
    </span>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </header>
</div>
`;
